Use OAuth for GitHub API requests